# uuid7

./: CHANGELOG.md  README.md  pyproject.toml
src/edwh_uuid7/: __init__.py  core.py
tests/: test_core.py
